# orbitly

./: .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
backend/: Cargo.toml
backend/src/: args.rs  auth.rs  json.rs  main.rs  neo4j.rs
data/processed/: load.py  load_other.py  load_users.py  movies.py  movies2.py  relate.py  users.py
data/raw/: README.md  genres.csv  has_genre.csv  interests.csv  movies_genres.csv  nuevo_clean.csv  subinterest.csv  users.csv  users2.csv
data/raw/movies_metadata.csv/__MACOSX/: ._movies_metadata.csv
docs/: README  README.md  arquitectura.md  demo_script.md  Ética y privacidad (1).md
frontend/: index.html  package-lock.json  package.json
frontend/src/pages/: Chat.tsx  Feed.tsx  Interests.tsx  Register.tsx
frontend/src/services/: authService.tsx
neo4j/chypher/: user.cypher
neo4j/cypher/: category.cypher  genre.cypher  match.cypher  user.cypher
src/: App.tsx
src/components/: MobileFrame.tsx
src/pages/: Feed.tsx  Login.tsx  Matches.tsx  Profile.tsx  Register.tsx
src/services/: apiService.tsx  authService.tsx
